--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,11 @@
     <string name="exo_download_restarting">Download restarting</string>
     <string name="exo_track_selection_none">None</string>
 
+    <string name="select_download_quality">Select Download Quality</string>
+    <string name="hd_720p">HD (720p)</string>
+    <string name="save_as_default">Save as default</string>
+    <string name="done">Done</string>
+    <string name="sd_420p">SD (420P)</string>
+
 
 </resources>
